--- a/labs/rustycoder-python-restAPI-flask/byod.html
+++ b/labs/rustycoder-python-restAPI-flask/byod.html
@@ -1,10 +1,4 @@
 <div>
-	<h3>This is a header</h3>
-	<p> This is a paragraph.</p>
-	<ul>
-		<li>Bulleted List 1</li>
-		<li>Bulleted List 2</li>
-		<li>Bulleted List 3</li>
-	</ul>
-	To use a hyperlink click <a href=https://www.cisco.com>here</a>
+
+This lab assumes you already installed and know how to use the Mac terminal, python3, git, GitHub, and Postman. If you need to do this, please take the DevNetlearning lab entitled **Hello World for the Rusty Coder : Get Setup**.
 </div>
