--- a/labs/helloworld-rustycoder-getsetup/byod.html
+++ b/labs/helloworld-rustycoder-getsetup/byod.html
@@ -1,10 +1,3 @@
 <div>
-	<h3>This is a header</h3>
-	<p> This is a paragraph.</p>
-	<ul>
-		<li>Bulleted List 1</li>
-		<li>Bulleted List 2</li>
-		<li>Bulleted List 3</li>
-	</ul>
-	To use a hyperlink click <a href=https://www.cisco.com>here</a>
+This lab requires a Mac with internet access.
 </div>
