Some consistency updates

--- a/labs/rustycoder-python-restAPI-flask/byod.html
+++ b/labs/rustycoder-python-restAPI-flask/byod.html
@@ -1,4 +1,3 @@
 <div>
-
-This lab assumes you already installed and know how to use the Mac terminal, python3, git, GitHub, and Postman. If you need to do this, please take the DevNetlearning lab entitled **Hello World for the Rusty Coder : Get Setup**.
+This lab assumes you already installed and know how to use the Mac terminal, python3, git, GitHub, and Postman. You can get set up using the [Hello World for the Rusty Coder: Get Setup](https://learninglabs.cisco.com/modules/rustycoder-getstarted/helloworld-rustycoder-getsetup/step/1) Learning Lab.
 </div>
